# 0.1

./: .gitignore  kursiokai.txt  studentas.cpp  studentas.h  v0.1.cpp  v0.1.vcxproj
v0.2/: README.md  results_10M.txt  studentas.cpp  studentas_backup.h  test_10M.cpp  v0.2_simple.cpp
v1.0/: CMakeLists.txt  README.md  studentas.h
